Fix "sign up" button css
In my current native resolution, (1366 x 768) the
text would wrap in the bottom sign-up button
despite there being sufficient room for it
visually, so the horizontal padding is replaced with
button width to ensure text has enough horizontal
space to fit in one line. Furthermore, the footer
has been modified as it would cut off at the
bottom of the footer text in Chromium.

--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,11 @@ h3 {
     border: 3px solid #F9FAF8;
     border-radius: 8px;
     background-color: #3882F6;
-    padding: 6px 40px;
+    padding: 6px 0px;
     color: #F9FAF8;
     font-weight: bold;
     font-size: 18px;
+    width: 140px;
 }
 
 .header{
@@ -174,7 +175,7 @@ blockquote {
 .main-sign-up-body {
     display: flex;
     justify-content: center;
-    gap: 200px;
+    gap: 120px;
     border-radius: 10px;
     background-color: #3882F6;
     padding: 50px 140px;
@@ -200,9 +201,17 @@ img {
 
 footer {
     background-color: #1F2937;
-    padding: 40px;
+
     color: #F9FAF8;
     text-align: center;
+}
+
+footer div {
+    text-align: center;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .quote-wrapper {
@@ -217,6 +226,3 @@ footer {
     text-align: right;
 }
 
-html{
-    max-height: 100vh;
-}
